utils-core/main/default/objects/Datatable_Config__mdt/Datatable_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration options for c-base-datatable / c-soql-datatable</description>
    <label>Datatable Config</label>
    <pluralLabel>Datatable Config</pluralLabel>
</CustomObject>