utils-core/main/default/objects/Datatable_Config__mdt/fields/Has_Actions_Config__c.field-meta.xml
<CustomField>
    <fullName>Has_Actions_Config__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Migrate from old Type__c to these checkboxes</description>
    <label>Has Actions Config</label>
    <type>Checkbox</type>
</CustomField>