utils-core/main/default/objects/Datatable_Config__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>There is a bug around querying picklists in the WHERE clause from the child, so this is a text for now.</description>
    <inlineHelpText>Limitation in multiselect / normal picklists. Valid inputs are:

Actions
Lookups
Actions; Lookups</inlineHelpText>
    <label>Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>