utils-core/main/default/objects/Datatable_Config__mdt/validationRules/Require_exact_actions_or_lookups_text.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_exact_actions_or_lookups_text</fullName>
    <active>true</active>
    <description>Helps validate input, despite current workaround</description>
    <errorConditionFormula>LOWER(Type__c) != &apos;actions; lookups&apos;
&amp;&amp;
LOWER(Type__c) != &apos;actions;lookups&apos;
&amp;&amp;
LOWER(Type__c) != &apos;lookups; actions&apos;
&amp;&amp;
LOWER(Type__c) != &apos;lookups;actions&apos;
&amp;&amp;
LOWER(Type__c) != &apos;actions&apos;
&amp;&amp;
LOWER(Type__c) != &apos;lookups&apos;</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Valid values are `Actions`, `Actions; Lookups` or just `Lookups`.

Please excuse this workaround.</errorMessage>
</ValidationRule>